--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
       "discord.js": "^14.15.0",
       "sqlite3": "^5.1.7",
       "dotenv": "^16.4.5",
-      "node-fetch": "^2.7.0"
+      "node-fetch": "^2.7.0",
+      "pg": "^8.11.3"
     }
   }
