--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DISCORD_TOKEN=MTMzNzAwMDQ3NjgxNzc1MjA4NA.GlAgMj.uV7EFoYwM3L7pq7_jGhrYbBfeMR0kn8rOiSHkQ
+DISCORD_TOKEN=MTMzNzAwMDQ3NjgxNzc1MjA4NA.G9IqLE.ViXe7wQO2JpgaGV0UK5pi-QPjUDUsKOToEV3D0
 DATABASE_URL=postgresql://postgres:GQSMtIAxnYKIDMnxfkOoTDHbrIUJmAEg@turntable.proxy.rlwy.net:53147/railway
-OWNER_ID=
+OWNER_ID=917991444109750282
